# ditto

./: .eslintrc.json  .gitignore  .prettierrc.json  README.md  biome.json  index.html  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ditto-dnd/: index.html
plugins/: react-src-path.ts
src/: App.tsx  main.tsx  styles.css  styles.less  styles.module.less
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: logo.icns
src-tauri/src/: main.rs
src-tauri/src/service/: file.rs
src/api/: index.ts  request.ts  services.stable.ts  services.stable.types.ts  services.ts  services.types.ts
src/assets/: splashscreen.html
src/components/: PageLayout.tsx  VoltronModalWithPortal.tsx  header.tsx
src/config/: app-data.json
src/data/: component-dict copy.ts  component-dict.ts  constant.ts  constant.tsx  index.ts
src/enum/: index.ts
src/hooks/: context.ts  createHooks.ts  dsl-ctx.ts  index.ts  useAddSelf.tsx  useCustomProps.ts  useDeepEffect.ts  useHotkeysDict.ts  useMergeRefs.ts  useResizeObserver.ts
src/iframe/: main.tsx  store.ts  style.less
src/manifest/: index.ts
src/mock/: tab-case.json
src/routes/: index.ts
src/service/: api.ts  db-store.ts  developer.ts  file.ts  http.ts  iframe-communication.ts  new-file-manager.ts
src/store/: useDSLFragment.ts  usePageStore.ts  useProjectStore.ts
src/styles/: index.module.less
src/types/: action-type.ts  action.schema.ts  anchor-coordinate.ts  app-data.ts  component-config.ts  component-feature.ts  component-schema-ref.ts  (+26 more)
(+414 files in other folders)
